# Master_Thesis

./: .gitignore  CMakeLists.txt  main.cpp  mainTest.cpp  parallel.sh  plot_pot.py  statAnalysis.py  test.ipynb  test.nb  test.py  wavefunc_ev.py
src/: const.h  init_state.cpp  init_state.h  ops.cpp  ops.h  pot.cpp  pot.h
